--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
-    "fs-asana": "node ./dist/index.js"
+    "data-spring": "ts-node ./src/index.ts",
+    "clean": "rm -rf ./dist",
+    "build": "yarn clean && tsc && chmod +x dist/index.js",
+    "prepare": "yarn build",
+    "format": "prettier --write ./src/**/*.ts"
   },
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "yarn format"
     }
   },
   "prettier": {
@@ -37,25 +34,21 @@
   },
   "name": "fs-asana",
   "author": "Ben Tyler",
-  "module": "dist/fs-asana.esm.js",
+  "module": "dist/index.js",
   "size-limit": [
     {
-      "path": "dist/fs-asana.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/fs-asana.esm.js",
+      "path": "dist/index.js",
       "limit": "10 KB"
     }
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.1",
+    "@types/inquirer": "^7.3.3",
     "@types/yargs": "^17.0.2",
     "husky": "^7.0.1",
-    "np": "^7.5.0",
+    "prettier": "^2.3.2",
     "size-limit": "^5.0.1",
     "ts-node": "^10.0.0",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
