--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "node": ">=10"
   },
   "scripts": {
-    "data-spring": "ts-node ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && tsc && chmod +x dist/index.js",
+    "build": "yarn clean && tsc -p . && chmod +x dist/index.js",
     "prepare": "yarn build",
     "format": "prettier --write ./src/**/*.ts"
   },
